service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: helloworld
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: 80
