ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nginx.refactory.com
      http:
        paths:
          - path: /srv/?(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
